<resources>
    <string name="app_name">MyTestCart</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="tvLogin">Log in</string>
    <string name="tvForgot_password">Forgot Password</string>
    <string name="dont_have_account">Dont have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="name">Name</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="cpassword">Confirm password</string>
    <string name="enter_your_cpassword">Enter your confirm password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_profile">Profile</string>
    <string name="title_favorite">Favorite</string>
    <string name="title_cart">Cart</string>
    <string name="orders">Orders</string>
    <string name="shopping_address">Shopping Address</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="sign_out">Sign Out</string>
    <string name="women_products">Women Products</string>
    <string name="see_all">See All</string>
    <string name="men_products">Men Products</string>
    <string name="btnSignup">Sign Up</string>
    <string name="rahul">Rahul</string>
    <string name="_52">52 $</string>
    <string name="product_description">Spring/Autumn/Winter, suitable for many occasions, such as working, hiking, camping, mountain/rock climbing, cycling, traveling or other outdoors. Good gift choice for you or your family member. A warm hearted love to Father, husband or son in this thanksgiving or Christmas Day.n</string>
    <string name="product_descripton">Product Descripton</string>
    <string name="_3_9">3.9</string>
    <string name="men_s_clothing">men\'s clothing</string>
    <string name="mens_jacket">Mens Jacket</string>
    <string name="add_to_cart">+ Add To Cart</string>

</resources>