<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    tools:context=".ui.login.SigninFragment">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvLoin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvLogin"
        android:textSize="40sp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.052"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.082" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/ivShop"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@drawable/shoppingcart_bg"
        android:src="@drawable/ic_login_shopping_cart_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.87"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.120000005" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@id/emailLayout"
        app:layout_constraintStart_toStartOf="@id/emailLayout"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="300dp"
        app:layout_constraintTop_toBottomOf="@id/tvLoin">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_email"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@id/passwordLayout"
        app:layout_constraintStart_toStartOf="@id/passwordLayout"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        app:passwordToggleEnabled="true"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toBottomOf="@id/emailLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassWord"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_password"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvForgetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvForgot_password"
        android:textColor="@color/LoginYellow"
        app:layout_constraintTop_toBottomOf="@id/passwordLayout"
        app:layout_constraintEnd_toEndOf="@id/passwordLayout"
        android:layout_marginTop="10dp"
        android:textSize="15sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnLogin"
        android:textColor="@color/black"
        android:text="@string/tvLogin"

        android:background="@color/LoginYellow"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@id/tvForgetPassword"
        android:layout_marginTop="10dp" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvDontHaveAc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/dont_have_account"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@+id/btnLogin"
        app:layout_constraintStart_toStartOf="@+id/btnLogin"
        app:layout_constraintTop_toBottomOf="@id/btnLogin"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textSize="15sp"
        android:textColor="@color/LoginYellow"
        android:layout_marginStart="5dp"
        app:layout_constraintStart_toEndOf="@id/tvDontHaveAc"

        app:layout_constraintTop_toTopOf="@id/tvDontHaveAc" />

</androidx.constraintlayout.widget.ConstraintLayout>